--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "antd": "^5.22.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
